configs/gitlab.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gitlab-tcp
  labels:
    app: gitlab
  annotations:
    metallb.universe.tf/address-pool: default
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.243
  externalTrafficPolicy: Local
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
    - port: 443
      targetPort: https
      protocol: TCP
      name: https
    - port: 22
      targetPort: ssh
      protocol: TCP
      name: ssh
  selector:
    app: gitlab
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab
  labels:
    app: gitlab
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: gitlab
  template:
    metadata:
      labels:
        app: gitlab
    spec:
      containers:
        - name: gitlab
          image: "ulm0/gitlab"
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 22
            name: ssh
            protocol: TCP
          - containerPort: 80
            name: http
            protocol: TCP
          - containerPort: 443
            name: https
            protocol: TCP
          #livenessProbe:
          #  httpGet:
          #    path: /admin.index.php
          #    port: http
          #  initialDelaySeconds: 60
          #  failureThreshold: 10
          #  timeoutSeconds: 5
          #readinessProbe:
          #  httpGet:
          #    path: /admin.index.php
          #    port: http
          #  initialDelaySeconds: 60
          #  failureThreshold: 3
          #  timeoutSeconds: 5
          volumeMounts:
          - mountPath: /etc/gitlab
            name: gitlab-nfs
            subPath: config
          - mountPath: /var/log/gitlab
            name: gitlab-nfs
            subPath: log
          - mountPath: /var/opt/gitlab
            name: gitlab-nfs
            subPath: opt
      volumes:
      - name: gitlab-nfs
        persistentVolumeClaim:
          claimName: gitlab-claim
