configs/ha-config.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ha-tcp
  labels:
    app: ha
  annotations:
    metallb.universe.tf/address-pool: default
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.244
  externalTrafficPolicy: Local
  ports:
    - port: 80
      targetPort: web
      protocol: TCP
      name: web
  selector:
    app: ha
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ha
  labels:
    app: ha
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: ha
  template:
    metadata:
      labels:
        app: ha
    spec:
      containers:
        - name: homeassistant
          image: "homeassistant/home-assistant:stable"
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 8123
            name: web
            protocol: TCP
          volumeMounts:
          - mountPath: /config
            name: ha-nfs
      volumes:
      - name: ha-nfs
        persistentVolumeClaim:
          claimName: ha-claim
