configs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: name-virtual-host-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: acme-prod
spec:
  rules:
    - host: unifi.rehl.xyz
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: unifi-tcp
                port:
                  number: 80
    - host: ha.rehl.xyz
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: ha-tcp
                port:
                  number: 80

    - http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: ha-tcp
                port:
                  number: 80
  tls:
    - hosts:
        - ha.rehl.xyz
      secretName: ha-rehl-xyz-tls
