configs/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: name-virtual-host-ingress
spec:
  rules:
    - host: unifi.rehl.xyz
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: unifi-tcp
                port:
                  number: 80
    - host: ha.rehl.xyz
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: ha-tcp
                port:
                  number: 80

    - http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: ha-tcp
                port:
                  number: 80
